@@ -54,7 +54,7 @@
           //grove
           'grove_led', 'grove_button', 'grove_relay',
           'grove_tilt_switch', 'grove_piezo_buzzer',
-          'grove_pir_motion_sensor', 'grove_line_finder',
+          'grove_pir_motion_sensor', 'grove_line_finder', 'grove_rgb_led',
           //grove LCD
           'grove_serial_lcd_print', 'grove_serial_lcd_power',
           'grove_serial_lcd_effect', 'grove_ultrasonic_ranger',
